--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 
-<!-- Mirrored from wordpressboss.com/opb/vtravel-demo/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 10 Apr 2019 21:26:36 GMT -->
 <head>
     <!-- META -->
     <meta charset="utf-8">
@@ -727,7 +726,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <div class="footer-text">
-                        <h6>&copy;copyright | Dakou Solutions.all right Reserved</h6>
+                        <h6>&copy;copyright | Asradd .all right Reserved</h6>
                     </div>
                 </div>
             </div>
