--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
     <!-- / END TESTIMONIAL DESIGN AREA -->
 
     <!-- START TEAM DESIGN AREA -->
-    <section id="team" class="team-area section-padding">
+<!--     <section id="team" class="team-area section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -585,50 +585,50 @@
             </div>
             <div class="row">
                 <!-- START SINGLE TEAM DESIGN AREA -->
-                <div class="col-md-4 col-sm-6">
+<!--                 <div class="col-md-4 col-sm-6">
                     <div class="single-team">
                         <div class="team-image">
                             <img src="assets/images/team/team1.jpg" class="img-responsive">
                         </div>
                         <div class="team-description">
                             <!-- <h4>hamada</h4> -->
-                            <h5>Taxi driver & traveler</h5>
+<!--                             <h5>Taxi driver & traveler</h5>
                             <p>I’d like to send you a sincere "thank you" for all of your assistance during my recent trip to Colorado.</p>
                         </div>
-                    </div>
-                </div>
+                    </div> -->
+                </div> -->
                 <!-- / END SINGLE TEAM DESIGN AREA -->
                 <!-- START SINGLE TEAM DESIGN AREA -->
-                <div class="col-md-4 col-sm-6">
+<!--                 <div class="col-md-4 col-sm-6">
                     <div class="single-team">
                         <div class="team-image">
                             <img src="assets/images/team/team2.jpg" class="img-responsive">
                         </div>
-                        <div class="team-description">
+                        <div class="team-description"> -->
                            <!--  <h4>Jessica jui</h4> -->
-                            <h5>Taxi driver & traveler</h5>
+<!--                             <h5>Taxi driver & traveler</h5>
                             <p>I’d like to send you a sincere "thank you" for all of your assistance during my recent trip to Colorado.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- / END SINGLE TEAM DESIGN AREA -->
                 <!-- START SINGLE TEAM DESIGN AREA -->
-                <div class="col-md-4 col-sm-6">
+<!--                 <div class="col-md-4 col-sm-6">
                     <div class="single-team">
                         <div class="team-image">
                             <img src="assets/images/team/team3.jpg" class="img-responsive">
-                        </div>
-                        <div class="team-description">
+                        </div> -->
+<!--                         <div class="team-description"> -->
                             <!-- <h4>Monalisa lui</h4> -->
-                            <h5>Taxi driver & traveler</h5>
-                            <p>I’d like to send you a sincere "thank you" for all of your assistance during my recent trip to Colorado.</p>
-                        </div>
+<!--                             <h5>Taxi driver & traveler</h5>
+                            <p>I’d like to send you a sincere "thank you" for all of your assistance during my recent trip to Colorado.</p> -->
+<!--                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- / END SINGLE TEAM DESIGN AREA -->
-            </div>
+<!--             </div>
         </div>
-    </section>
+    </section> -->
     <!-- / END TEAM DESIGN AREA -->
 
 
