--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                             <p>I’d like to send you a sincere "thank you" for all of your assistance during my recent trip to Colorado.</p>
                         </div>
                     </div> -->
-                </div> -->
+<!--                 </div> -->
                 <!-- / END SINGLE TEAM DESIGN AREA -->
                 <!-- START SINGLE TEAM DESIGN AREA -->
 <!--                 <div class="col-md-4 col-sm-6">
